[package]
name = "ironkey"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple password generator with fast TUI"
homepage = "https://git.kekma.tech/IronKey.git"
documentation = "https://github.com/KekmaTime/IronKey/blob/master/README.md"
repository = "https://github.com/KekmaTime/IronKey"
readme = "https://github.com/KekmaTime/IronKey/blob/master/README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
scanrs = "0.3.0"
dirs = "5.0.1"
clipboard = "0.5.0"
